[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 110
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 110
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="."]
margin_left = 412.5
margin_top = 50.0
margin_right = 452.5
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="."]
margin_left = 612.5
margin_top = 50.0
margin_right = 652.5
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
margin_left = 350.0
margin_top = 200.0
margin_right = 706.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTime" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="MessageLabelP1" type="Label" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 857.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabelP2" type="Label" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 240.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win_P1" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="win_P2" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
